VV Shop static mockup

--- a/react-4-common-people/public/index.html
+++ b/react-4-common-people/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
+  <head>
+    <link rel="SHORTCUT ICON" href="./favicon.png">
+    <title>Vicens Vives Shop</title>
+  </head>
   <body>
     <div id="root"></div>
   </body>
